Increase scrapping interval on ServiceMonitor

--- a/helm/k8s-dns-node-cache-app/templates/servicemonitor-coredns.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/servicemonitor-coredns.yaml
@@ -8,7 +8,7 @@ metadata:
 spec:
   endpoints:
     - honorLabels: true
-      interval: 10s
+      interval: 1m
       path: /metrics
       port: coredns
       relabelings:
