Expose health check port

--- a/helm/k8s-dns-node-cache-app/templates/daemonset.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/daemonset.yaml
@@ -72,10 +72,13 @@ spec:
         - containerPort: 53
           name: dns-tcp
           protocol: TCP
+        - containerPort: {{ .Values.ports.liveness }}
+          name: health
+          protocol: TCP
         livenessProbe:
           httpGet:
             path: /health
-            port: {{ .Values.ports.liveness }}
+            port: health
           initialDelaySeconds: 60
           timeoutSeconds: 5
         volumeMounts:
