Configure serve_stale for cache

--- a/helm/k8s-dns-node-cache-app/templates/configmap.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/configmap.yaml
@@ -15,6 +15,7 @@ data:
         cache {
                 success 9984 {{ .Values.configmap.cache.success }}
                 denial 9984 {{ .Values.configmap.cache.denial }}
+                serve_stale
         }
         reload
         loop
