--- a/helm/k8s-dns-node-cache-app/templates/daemonset.yaml
+++ b/helm/k8s-dns-node-cache-app/templates/daemonset.yaml
@@ -54,6 +54,7 @@ spec:
         - -setupinterface=false
         - -setupiptables=false
         securityContext:
+          readOnlyRootFilesystem: true
           capabilities:
             add:
             - NET_BIND_SERVICE
