--- a/helm/k8s-dns-node-cache-app/Chart.yaml
+++ b/helm/k8s-dns-node-cache-app/Chart.yaml
@@ -1,12 +1,12 @@
 apiVersion: v2
-appVersion: 1.26.4
+appVersion: 1.26.7
 description: A Helm chart to run NodeLocal DNSCache in Kubernetes clusters
 icon: https://s.giantswarm.io/app-icons/giantswarm/1/dark.svg
 home: https://github.com/giantswarm/k8s-dns-node-cache-app
 name: k8s-dns-node-cache-app
 version: 2.9.1
 annotations:
-  application.giantswarm.io/team: "cabbage"
+  io.giantswarm.application.team: cabbage
 restrictions:
   clusterSingleton: true
   fixedNamespace: kube-system
