Migrate chart metadata annotations (#145)
* Migrate chart metadata annotations

- Add io.giantswarm.application.audience annotation
- Add io.giantswarm.application.managed annotation
- Migrate top-level restrictions block to io.giantswarm.application.restrictions.* annotations

Ref: https://github.com/giantswarm/giantswarm/issues/35442

* Remove managed annotation

Per team discussion, the managed annotation is not needed.

--- a/helm/k8s-dns-node-cache-app/Chart.yaml
+++ b/helm/k8s-dns-node-cache-app/Chart.yaml
@@ -7,7 +7,7 @@ name: k8s-dns-node-cache-app
 version: 2.9.2
 annotations:
   io.giantswarm.application.team: cabbage
-restrictions:
-  clusterSingleton: true
-  fixedNamespace: kube-system
-  gpuInstances: false
+  io.giantswarm.application.audience: "all"
+  io.giantswarm.application.restrictions.cluster-singleton: "true"
+  io.giantswarm.application.restrictions.fixed-namespace: kube-system
+  io.giantswarm.application.restrictions.gpu-instances: "false"
